--- a/css/style.css
+++ b/css/style.css
@@ -44,4 +44,9 @@ footer{
   position: absolute;
   bottom: 0px;
 }
+
+.about_img{
+  background-image: url(https://cdn.pixabay.com/photo/2015/06/24/15/45/code-820275_1280.jpg);
+  height: 500px;
+  width: 100%;
 }
