--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,22 @@ footer{
   height: 500px;
   background-repeat: no-repeat;
 }
+
+.login_content{
+  padding: 10px;
+  text-align: center;
+  width: 350px;
+  height: 230px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login_button{
+  margin:50px 0px ;
+  width: 330px;
+  height: 40px;
+  color: white;
+  background-color: black;
+}
